.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:07:09 **** Incremental Build of configuration Debug for project Homework6 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\production.o" "..\\src\\production.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tests.o" "..\\src\\tests.cpp" 
g++ -o Homework6.exe "src\\Homework6.o" "src\\production.o" "src\\tests.o" 
Info: Nothing to build for Homework6
12:10:57 **** Incremental Build of configuration Debug for project Homework6 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ship.o" "..\\src\\Ship.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\AircraftCarrier.o" "..\\src\\AircraftCarrier.cpp" 
In file included from ..\src\AircraftCarrier.cpp:8:
..\src\AircraftCarrier.h:11:36: error: expected class-name before '{' token
 class AircraftCarrier: public Ship {
                                    ^
12:11:07 **** Incremental Build of configuration Debug for project Homework6 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\AircraftCarrier.o" "..\\src\\AircraftCarrier.cpp" 
g++ -o Homework6.exe "src\\AircraftCarrier.o" "src\\Homework6.o" "src\\Ship.o" "src\\production.o" "src\\tests.o" 
12:20:01 **** Incremental Build of configuration Debug for project Homework6 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Destroyer.o" "..\\src\\Destroyer.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Cruiser.o" "..\\src\\Cruiser.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Submarine.o" "..\\src\\Submarine.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Battleship.o" "..\\src\\Battleship.cpp" 
g++ -o Homework6.exe "src\\AircraftCarrier.o" "src\\Battleship.o" "src\\Cruiser.o" "src\\Destroyer.o" "src\\Homework6.o" "src\\Ship.o" "src\\Submarine.o" "src\\production.o" "src\\tests.o" 
